--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.78.0"
   }
 }
